--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -1,22 +1,22 @@
 # Motak
 
-Klaseek objektuei orientatutako programazioa izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
-Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara bideratutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz.
+Klaseek objektuei zuzendutako programazioa izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
+Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara zuzendutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz. Hots, arazoan existitzen diren gauzak objektuak bilakatuz.
 
-Demagun Mario Kart bezalako lasterketa-joko baten programa egin behar dugula. Objektuetara bideratutako programazioa erabiliz, jokoaren elementuak honako klase hauekin irudika ditzakegu:
+Demagun Mario Kart bezalako lasterketa joko baten programa egin behar dugula. Objektuetara zuzendutako programazioa erabiliz, jokoaren elementuak honako klase hauekin irudika ditzakegu:
 
 - Pertsonaia, bere izenarekin eta beste ezaugarri batzuekin.
-- Autoa, bere ezaugarri hauekin: abiadura, erresistentzia, azelerazio-funtzioak, etab.
+- Autoa, bere ezaugarri hauekin: abiadura, erresistentzia, azelerazio funtzioak, etab.
 - Zirkuitua, luzerarekin, tunelekin, sariekin eta abarrekin.
 
 ## Nola sortu klaseak
 
-Klase bat programazio-egitura bat da, entitate bat bere propietate eta metodoekin irudikatzeko aukera ematen diguna. Hau da, klase bat:
+Klase bat programazio egitura bat da, entitate bat bere propietate eta metodoekin errepresentatzeko aukera ematen diguna. Hau da, klase bat:
 
-- Propietateak ditu: berezko aldagaiak.
+- Atributu edo propietateak ditu: berezko aldagaiak.
 - Gauzak egiten ditu: funtzioak.
 
-Adibidez, hurrengo klaseak katu oso sinple bat irudikatzen du, maullatzeko funtzio batekin:
+Adibidez, hurrengo klaseak katu oso sinple bat errepresentatzen du, miauka egiteko funtzio batekin:
 
 ```python
 class Katua:
@@ -24,17 +24,17 @@ class Katua:
     print ("Miau")
 ```
 
-Ikus daitekeenez, klasea definitzeko, `class 'hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra maiuskulaz. Bloke horren barruan doan guztia ikasgelaren parte izango da.
+Ikus daitekeenez, klasea definitzeko, `class` hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra larriz. Bloke horren barruan doan guztia klasearen parte izango da.
 
-Bestalde, kontuan izan behar duzu** guztiek** klase baten funtzioek parametro `self 'berberak izan behar dituztela, nahiz eta ez erabili. Parametro hori klaseari berari dagokio, eta haren propietateei eta funtzioei erreferentzia egiteko erabiltzen da, orain ikusiko dugun bezala.
+Bestalde, kontuan izan behar duzu  klase baten funtzio **guztiek**  `self` parametro berbera izan behar dituztela, nahiz eta ez erabili. Parametro hori klaseari berari dagokio, eta haren propietateei eta funtzioei erreferentzia egiteko erabiltzen da, orain ikusiko dugun bezala.
 
 ## Klasea vs instantzia
 
 Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzeko, instantzia bat sortu behar dugu. Honela egiten da:
 
 ```python
-gato = Katua ()
-gato.miaukatu()
+katu = Katua()
+katu.miaukatu()
 ```
 
 Pantailan honako hauek ikusiko ditugu:
@@ -43,11 +43,11 @@ Pantailan honako hauek ikusiko ditugu:
 Miau
 ```
 
-Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta maulla ditu. Instantzia objektu zehatz bat da: Neko.
+Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta `miaukatu` ditu. Instantzia objektu zehatz bat da: `katu`.
 
-5.0 ariketa
+5.0 Ariketa
 
-Idatzi lo egiteko, jateko eta agurtzeko metodoak dituen Pertsona izeneko klase bat definituko duen programa bat. Metodo bakoitzaren barruan testuren bat atera behar duzu kontsola bidez. Sortu ikasgelako instantzia bat eta deitu metodo desberdinetara.
+Idatzi `Pertsona` izeneko klase bat, lo egiteko, jateko eta agurtzeko metodoak dituen funtzioak definituko duen programa bat. Funtzio edo metodo bakoitzaren barruan testuren bat atera behar duzu kontsola bidez. Sortu klasearen instantzia bat eta deitu metodo desberdinetara.
 
 ```python
 class Pertsona:
@@ -72,13 +72,13 @@ Emaitza:
 ```console
 ZZZZZ...
 Ñam, Ñam...
-Kaixo, zer moduz?
+Kaixo, zer moduz!
 ```
 
-## Eraikuntza-funtzioa
+## Eraikuntza funtzioa
 
-Orain dela gutxi definitu dugun katu hori. Izen bat emango diogu. Gainera, funtzio berezi bat sortuko dugu, `__init___ 'izenekoa.
-*** eraikuntza-funtzioa* esaten zaio. Funtzio hau klaseko objektu bat sortzen denean deitzen da, eta, beraz, klasearen propietateei ekiteko lekurik egokiena da:
+Lehenago definitu dugun katu horri izen bat emango diogu. Horretarako, funtzio berezi bat sortuko dugu, `__init___` izenekoa.
+**eraikuntza-funtzioa** esaten zaio (_constructor_ ingelesez). Funtzio hau klaseko objektu bat sortzen denean deitzen da, eta, beraz, klasearen propietateak hasieratzeko lekurik egokiena da:
 
 ```python
 class Katua:
@@ -89,7 +89,7 @@ class Katua:
     print("Miau, naiz", self.izena)
 ```
 
-Orain, katu klaseko objektuak sortzen ditugunean, izen bat emango diogu, eta hau jabego gisa geratuko da:
+Orain, `Katua` klaseko objektuak sortzen ditugunean, izen bat emango diogu, eta hau `izena` atributuan geratuko da:
 
 ```python
 gato = Katua("Pixi")
@@ -106,10 +106,9 @@ Miau, Pixi naiz.
 Miau, Cheto naiz.
 ```
 
-5.1 ariketa
+5.1 Ariketa
 
-Idatzi programa bat Kaixo izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `osasuna 'izeneko propietate batekin. Jabetza hori "kaixo" hitzarekin hasiko da.
-Horrez gain, `decirHola«izeneko metodo bat erantsiko duzu, eta, pantailan, osasunaren edukia erakutsiko du.
+Idatzi programa bat `Kaixo` izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `agurra` izeneko atributu batekin. Atributu hori "kaixo" hitzarekin hasiko da. Horrez gain, `esanKaixo` izeneko metodo bat erantsiko duzu, eta, pantailan, agurraren edukia erakutsiko du.
 
 ```python
 class Kaixo:
@@ -131,8 +130,9 @@ Kaixo
 ```
 
 ## Herentzia
-Herentzia kodea berrerabiltzeko klaseek duten mekanismo bat da. Demagun katakume bat ordezkatzen duen eskola bat egin nahi dugula. Katu klaseak egiten duen gauza bera egitea nahi dugu, baina, gainera, zurrunga egitea.
-Txakurkume klaseak Katu klasetik heredatu ahal izango luke, honela:
+
+Herentzia kodea berrerabiltzeko klaseek duten mekanismo bat da. Demagun katakume bat definitzen duen klase bat egin nahi dugula. Katu klaseak egiten duen gauza bera egitea nahi dugu, baina, gainera, zurrunga egitea.
+`Katakumea` klaseak `Katua` klasetik heredatu ahal izango luke, honela:
 
 ```python
 class Katakumea (Katua):
@@ -140,7 +140,7 @@ class Katakumea (Katua):
     print ("Purrrr")
 ```
 
-Orain honako hau egin dezakegu. Txakurkume objektu bat sortzea, Katu klasearen propietate berberekin. Automatikoki jarauntsiko ditu jabetza (izena) eta metodo hau:
+Orain honako hau egin dezakegu. `Katakumea` objektu bat sortzea, `Katua` klasearen propietate berberekin. Automatikoki jasoko ditu `izena` atributua eta `miaukatu` metodoa:
 
 ```python
 katutxoa = Katakumea ("Lucifur")
@@ -155,13 +155,13 @@ Purrrr
 Miau, Lucifur naiz.
 ```
 
-## super ()
+## super()
 
-Azpiklase bat edo klase bat beste baten alaba sortzen duzunean, heredatzen duzun ikasgelatik `super () "funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
-Adibidez, aurreko kasuan, `Cachorroere 'azpimailatik berezko eraikitzaile bat gehi genezake, eta `Gatoere' superklasearen eraikitzaileari ere dei diezaiokegu:
+Azpiklase bat edo klase bat beste baten semea sortzen duzunean, heredatzen duzun klasetik `super()` funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
+Adibidez, aurreko kasuan, `Katakumea` azpimailatik berezko eraikitzaile bat gehi genezake, eta `Katua` superklasearen eraikitzaileari ere dei diezaiokegu:
 
 ```python
-class Cachorro (Katua):
+class Katakumea (Katua):
   def __init__ (self, izena):
     super () .__init__ (izena)
     print ("Katakumea sortua")
@@ -170,10 +170,10 @@ class Cachorro (Katua):
     print ("Purrrr")
 ```
 
-5.2 ariketa
+5.2 Ariketa
 
-Idatz ezazu `Comidaa 'klasea definituko duen programa bat, izendapenaren atributuarekin. Sor ezazu `Frutak 'izeneko azpiklase bat, `Comidak `izena eta bitaminak `jasotzen dituen eraikitzaile batekin, eta `infoagne' izeneko metodo bat, bere informazio guztia itzultzen duena.
-Sortu instantzia bat `Frutaa 'klasea probatzeko.
+Idatz ezazu `Janaria` klasea definituko duen programa bat, `izena` atributuarekin. Sor ezazu `Fruitua` izeneko azpiklase bat, `Janaria` izena eta `bitaminak` jasotzen dituen eraikitzaile batekin, eta `info`  izeneko metodo bat, bere informazio guztia itzultzen duena.
+Sortu instantzia bat `Fruitua` klasea probatzeko.
 
 ```python
 class Janaria:
@@ -203,11 +203,10 @@ Kiwi ['A', 'C']
 
 ## Enkapsulazioa
 
-Katuaren adibidean, zuzenean sar daiteke izena jabetzara.
-Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
+Katuaren adibidean, zuzenean sar daiteke izena jabetzara. Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
 
 ```python
-objektua.IzenaJabetza
+objektua.AtributuIzena
 ```
 
 Katuak izena izeneko propietate bat du.
@@ -219,7 +218,7 @@ nireKatua.izena = "Pixel"
 nireKatua.miaukatu () #Miau, Pixel naiz
 ```
 
-Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina ni bezalako programatzaile onak klasea kapsulatzen saiatzen gara. Zer esan nahi du horrek? Ezin direla zuzenean haren propietateak edo metodoak sartu edo aldatu. Klasea erabiltzen dutenentzat beharrezkoa dena bakarrik.
+Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina programatzaile onak klasea kapsulatzen saiatzen dira. Zer esan nahi du horrek? Ezin direla zuzenean haren propietateak irakurri edo aldatu. Klasea erabiltzen dutenentzat beharrezkoa dena bakarrik eskeini behar zaie.
 Bestela esanda, programatzaileek "kutxa beltzak" diruditen klaseak sortzen saiatu behar dute. Izena bezalako propietateen kasuan, Python-en metodo hauek gehitu daitezke:
 
 Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
@@ -233,7 +232,7 @@ Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
 Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
 
 ```python
-@nombre.setter
+@izena.setter
 def izena (izena):
   if izena! = "":
     self._izena = izena
@@ -250,7 +249,7 @@ class Katua:
   def izena ():
     return self._izena
 
-  @nombre.setter
+  @izena.setter
   def izena (izena):
     if izena! = "":
       self._izena = izena
@@ -259,19 +258,19 @@ class Katua:
     print ("Miau, ni naiz ", self.izena)
 ```
 
-Ikus ezazu propietatea `izena`dela orain. Jabetza hori "pribatua" dela adierazteko modu bat da, eta ez litzatekeela ikasgelatik kanpo eskuratu behar.
-Orain, "Izena" izeneko klasea erabiltzen dugunean, funtzio berri horien bidez egingo da.
+Ikus ezazu propietatea `izena` dela orain. Jabetza hori  "pribatua" dela adierazteko modu bat da, eta ez litzatekeela klasetik kanpo eskuratu behar.
+Orain, `Katua` izeneko klasea erabiltzen dugunean, funtzio berri horien bidez egingo da.
 
 ```python
 nireKatua = Katua ("Pixi")
-print (nireKatua.izena) #deitu `def izena () metodora:
+print (nireKatua.izena) # deitu `def izena ()` metodora:
 nireKatua.izena = "Pixel" #deitu `def izena (izena) metodora:
-nireKatua.miaukatu () #Miau, ni naiz Pixel
+nireKatua.miaukatu () # Miau, ni naiz Pixel
 ```
 
-5.3 ariketa
+5.3 Ariketa
 
-Idatz ezazu `Vehiculoere 'klasea definituko duen programa bat, "matrikula" atributuarekin, get/set metodoekin eta "arrancar«" izeneko beste metodo batekin. Sortu "Zortzi" izeneko azpiklase bat, `Vehicullo 'klasea zabaltzeko, eta eraikitzaile batek `matrikulak, modeloak eta koloreak' jasoko ditu, eta informazio guztia itzultzeko funtzio bat izango du. Sortu instantzia bat "Zortzi" klasea probatzeko.
+Idatz ezazu `Ibilgailua` klasea definituko duen programa bat, `matrikula` atributuarekin, get/set metodoekin eta `abiarazi` izeneko beste metodo batekin. Sortu `Kotxea` izeneko azpiklase bat, `Ibilgailua` klasea zabaltzeko, zein eraikitzaile batean `matrikula`, `modeloa` eta `kolorea` jasoko ditu, eta informazio guztia itzultzeko funtzio bat izango du. Sortu instantzia bat `Kotxea` klasea probatzeko.
 
 ```python
 class Ibilgailua:
@@ -309,20 +308,21 @@ print(kotxea.info())
 Emaitza:
 
 ```console
-0042ASI abiarazten
+0042ASI Abiarazten
 0042ASI Opel Corsa Zuria
 ```
 
 Zer abantaila izan dezake kapsularatzeak?
 
-Funtsean, "kanpotik" ezin da ikasgela kontrolik gabe manipulatu. Horregatik da kutxa beltz bat bezalakoa, bideo-kontsola bat bezalakoa. Joko bat jokatzeko eskuz ireki eta soldatu beharko bazenu, ziurrenik kontsola kargatuko zenuke. Horregatik, aparatuak kutxa beltz gisa diseinatzen dira, kanpotik manipulatzeko aukera baino ez dizute ematen.
-Katu klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. "Setter" funtzioaren bidez, esleitu nahi den izena zuzena dela kontrola dezakegu.
+Funtsean, "kanpotik" ezin da klase kontrolik gabe manipulatu. Horregatik kutxa beltz bat bezalakoa da.
+Bideo-kontsola batekin alderatu daiteke. Joko bat jokatzeko eskuz ireki eta soldatu beharko bazenu, ziurrenik kontsola apurtuko zenuke. Horregatik, aparatuak kutxa beltz gisa diseinatzen dira, kanpotik manipulatzeko aukera batzuk baino ez dizute ematen.
+`Katua` klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. "Setter" funtzioaren bidez, esleitu nahi den izena zuzena dela kontrola dezakegu.
 
 ## Beste mota batzuk dituzten klaseak
 
-Objektuetara bideratutako programazioarekin, klaseen bidez mundu errealeko gauzak irudikatzen saiatzen gara. Eta klase horiek bata bestearekin lotuta egon daitezke.
+Objektuetara zuzendutako programazioarekin, klaseen bidez mundu errealeko gauzak irudikatzen saiatzen gara. Eta klase horiek bata bestearekin lotuta egon daitezke.
 
-Adibidez, ikastetxe batek gelak izan ditzake, gela batek ikasleak eta irakasleak izan ditzake, etab.
+Adibidez, demagun zure ikastola klaseen bidez errepresentatu nahi dugula. Ikastetxe batek gelak izan ditzake, gela batek ikasleak eta irakasleak izan ditzake, etab.
 Klaseek, beraz, beste mota batzuetako propietateak edo beste klase batzuetako zerrendak ere izan ditzakete.
 
 ```python
@@ -345,16 +345,16 @@ alumno1 = Ikaslea ("Gumball")
 alumno2 = Ikaslea ("Darwin")
 
 gela = Gela ()
-gela.sartuIkaslea ("Kepa")
-gela.sartuIkaslea ("Amets")
-gela.listaPasa ()
+gela.sartuIkaslea("Kepa")
+gela.sartuIkaslea("Amets")
+gela.listaPasa()
 ```
 
 Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
 
-5.4 ariketa
+5.4 Ariketa
 
-Idatz ezazu programa bat, `Piloto«atributua» eta «get/set» funtzioak dituena. Era berean, sor ezazu `Aeroplana» izeneko klase bat, eredu, pilotu eta kopilotu atributuarekin, get/set funtzioekin modelorako, eta beste metodo batekin, «volard» izenekoa. Sortu instantzia bat bi klaseak probatzeko.
+Idatz ezazu programa bat, `Pilotoa` eta `get/set` funtzioak dituena. Era berean, sor ezazu `Hegazkina` izeneko klase bat, `modeloa`, `pilotoa` eta `kopilotoa` atributuarekin, `get/set` funtzioekin modelorako, eta `info` metodo batekin atributuen balioak pantailaratzeko. Sortu instantzia bat bi klaseak probatzeko.
 
 ```python
 
@@ -409,18 +409,18 @@ Hegan AirBluff 727 Han Solo Murdockekin
 Normalean, klase bat erabili ahal izateko, haren instantzia bat sortzen dugu beti, aurreko adibidean egiten genuen bezala:
 
 ```python
-alumno1 = Ikaslea ("Gumball")
+ikasleBat = Ikaslea ("Gumball")
 ```
 
 Batzuetan, agian, kopiarik egin nahi ez dugun klase bat sortu nahi dugu, zeregin zehatz bat egiteko bakarrik balio duena, funtzio bat balitz bezala.
 
-Adibidez, izen bat emanda, formatu zuzena ematen dion eskola bat egin dezakegu, lehenengo letra larriarekin eta gainerako letra xeheekin:
+Adibidez, izen bat emanda, formatu zuzena ematen dion klase bat egin dezakegu, lehenengo letra larriarekin eta gainerako letra xeheekin:
 
 ```python
 class Formatua:
   @staticmethod
   def zuzendu (izena):
-  r eturn izena [0] .upper () + izena [1:] .lower ()
+  return izena [0] .upper () + izena [1:] .lower ()
 
   print (Formatua.zuzendu("gUmBaLl"))
 ```
@@ -431,9 +431,9 @@ Emaitza:
 Gumball
 ```
 
-5.5 ariketa
+5.5 Ariketa
 
-Idatzi programa bat, `Numeroa 'izeneko klase bat definituko duena, eta funtzio estatiko bat, "aleatorio (max)" izenekoa. Funtzio honek zenbaki bat itzuli behar du 0 eta max tarteen barruan.
+Idatzi programa bat, `Zenbakia` izeneko klase bat definituko duena, eta funtzio estatiko bat, `ausazkoa (max)` izenekoa. Funtzio honek zenbaki bat itzuli behar du 0 eta `max` tarteen barruan.
 
 ```python
 import random
@@ -456,14 +456,14 @@ Emaitza:
 1
 ```
 
-DENA
-Zergatik egin klase bat horrelako funtzio batekin eta ez zuzenean funtzio batekin? Ikasgela batean egitea baliagarria izan daiteke leku berean funtzio estatiko bat edo gehiago sartu nahi ditugunean, eta ez ditugu instantzia desberdinak sortu nahi, funtzio zehatzak erabili baizik.
+ADI
+Zergatik egin klase bat horrelako funtzio batekin eta ez zuzenean funtzio batekin? klase batean egitea baliagarria izan daiteke leku berean funtzio estatiko bat edo gehiago sartu nahi ditugunean, eta ez ditugu instantzia desberdinak sortu nahi, funtzio zehatzak erabili baizik.
 
 ## Proposatutako ariketak
 
-5.0 ariketa
+5.0 Ariketa
 
-Idatzi `Instrumento 'izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena 'eta `mota'. Gainera, `ukitu 'izeneko funtzio bat gehitu behar duzu, mezu bat eta beste dei bat aterako dituena, atributuen informazioa duen testu bat itzultzeko.
+Idatzi `Instrumentua` izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena` eta `mota`. Gainera, `jo`  izeneko funtzio bat gehitu behar duzu, mezu bat eta beste dei bat aterako dituena, atributuen informazioa duen testu bat itzultzeko.
 Sortu gelako instantzia bat eta deitu bere funtzioetara.
 
 ```python
@@ -472,7 +472,7 @@ class Instrumentua:
         self._izena = izena
         self._mota = mota
 
-    def jotzea (self):
+    def jo (self):
         print("Jotzen ", self._izena, "jotzen")
 
     def info (self):
@@ -480,7 +480,7 @@ class Instrumentua:
 
 
 nireGitarra = Instrumentua("Gitarra", "klasikoa")
-nireGitarra.jotzea()
+nireGitarra.jo()
 print(nireGitarra.info())
 ```
 Emaitza:
@@ -490,9 +490,9 @@ Gitarra jotzen
 Hari-gitarra
 ```
 
-5.1 ariketa
+5.1 Ariketa
 
-Idatz ezazu programa bat, `NombreFormateado" izeneko klase bat definituko duena, eta, bertan, etxegile bat agertuko da, eta `izena 'eta `abizena' izeneko funtzio bat ere izango du. Sortu zure ustez egokiak diren eginkizun osagarriak.
+Idatz ezazu programa bat, `IzenZuzena` izeneko klase bat definituko duena, eta, bertan, `__init__` eraikitzailea bat `izena` eta `abizena` atributuak hasieratzeko. Gainera, klaseak `zuzendu` izeneko metodo bat izan behar du, `izena` eta `abizena` atributuak zuzenduko dituena. Zuzendu metodoak, lehenengo hizkiak larri eta gainerakoak xehe itzuliko ditu.
 
 ```python
 class IzenZuzena:
@@ -526,9 +526,9 @@ Emaitza:
 Juan Pérez
 ```
 
-5.2 ariketa
+5.2 Ariketa
 
-Idatz ezazu programa bat `Sumador, 'izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako get eta set funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen "batuketa" funtzioa izango dute.
+Idatz ezazu programa bat `Batuketa`, izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako `get` eta `set` funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen `batu` funtzioa izango dute.
 
 ```python
 class Batuketa:
@@ -577,9 +577,9 @@ Emaitza:
 666
 ```
 
-5.3 ariketa
+5.3 Ariketa
 
-Sortu programa bat `Monedaa 'izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `tirarin 'izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako* string* bat izan behar da. Sortu ikasgelako instantzia bat probatzeko.
+Sortu programa bat `Txanpona` izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `bota` izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako *string* bat izan behar da. Sortu klaseko instantzia bat probatzeko.
 
 ```python
 import random
@@ -611,16 +611,16 @@ gurutzea
 ...
 ```
 
-5.4 ariketa
+5.4 Ariketa
 
-Sortu programa bat "N aurpegiko dado baten portaera simulatzeko" Datuak "izeneko klase batekin. Sortu ikasgelako instantzia bat probatzeko.
+Sortu programa bat N aurpegiko dado baten portaera simulatzeko, `Dadoa` izeneko klase batekin. Sortu klaseko instantzia bat probatzeko.
 
-- `def __init__ 'eraikitzailea (self, aldeak, admitiCero = False): `lapur' atributuarekin: aurpegi-kopurua gordetzen duen atributua eta
-- `zeroOnartu`= Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsita, balio du:
-- setter `def lados (self, lados)` Parametrodun setter funtzioa. Atributua ezartzen du.
-Zero (self, aldeak, onargarriaZero): parametrodun funtzioa, bi atributuak ezartzen ditu.
-Funtzio horrek dadoaren jaurtiketa simulatzen du eta emaitza bat itzultzen du. Kontuan hartu behar duzu "Onartu zeroa" atributua.
-Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen dituen 20 aurpegiko dado bat sortzen duten instantziak, eta egizu bakoitzetik 100 jaurtiketa:
+- `def __init__ (self, aldeak, zeroOnartu = False)`:  aurpegi-kopurua gordetzen duen atributua eta `zeroOnartu`= Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsitako balioa False da.
+- `def aldeak (self, aldeak):` Parametrodun setter funtzioa. Atributua ezartzen du.
+- `def zeroOnartu (self):`: parametrodun funtzioa, bi atributuak ezartzen ditu.
+- `def bota (self)`: funtzio honek dadoaren jaurtiketa simulatzen du eta emaitza bat itzultzen du. Kontuan hartu behar duzu "Onartu zeroa" atributua.
+
+Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen dituen 20 aurpegiko dado bat sortzen duten instantziak, eta egizu bakoitzetik 100 jaurtiketa.
 
 ```python
 import random
@@ -676,15 +676,15 @@ Emaitza:
 ...
 ```
 
-5.5 ariketa
+5.5 Ariketa
 
 Sortu bi motatako programa bat:
 
-1- `Jugadora 'klasea, izen, postu eta dortsal ezaugarriak dituena. Parametro horiek guztiak dituen eraikitzaile bat ere badu, eta ezaugarri guztiak itzuliko dituen `informe 'izeneko funtzio bat.
-2 - Mota `Ekipola, izena, fundazioa, aurrekontua eta jokalari motako instantziak gordetzeko zerrenda. Honako ezaugarri hauek dituen eraikitzaile bat izan behar du: "izena", "fundazioa", "aurrekontua", "get/seta", "informazioa" funtzioa eta beste bi funtzio:
+1- `Jokalaria` klasea, `izena`, `posizioa` eta `zenbakia` ezaugarriak dituena. Parametro horiek guztiak dituen eraikitzaile bat ere sortu, eta ezaugarri guztiak itzuliko dituen `txosten` izeneko funtzio bat.
+2 - `Taldea` klasea, `izena`, `fundazioa`, `aurrekontua` eta `jokalariak` motako instantziak gordetzeko zerrenda. Honako ezaugarri hauek dituen eraikitzaile bat izan behar du. `Taldea` klaseak beste bi funtzio izango ditu: `jokalariaFitxatu` eta `jokalariakErakutsi`:
 
-- `def ficha (self, jugador )», zerrendara jokalariak gehitzeko.
-- `def demostratu 'Jokalariak (self), jokalarien datu guztiak jasotzen dituen kate bat itzultzeko
+- `def jokalariaFitxatu (self, jokalaria)`, zerrendara jokalariak gehitzeko.
+- ` def jokalariakErakutsi (self)`, jokalarien datu guztiak jasotzen dituen kate bat itzultzeko
 
 Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta horri jokalariak gehitu eta erakutsiko dizkiozu.
 
@@ -734,14 +734,14 @@ Maradona Aurrelaria 10
 Beckenbauer Defentsa 4
 ```
 
-5.6 ariketa
+5.6 Ariketa
 
 Sortu zenbait klase barne hartzen dituen programa bat.
 
-1 - Mota `Dispositiboa: "izena", "marka" eta "balioa" atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString 'funtzio bat erabiltzen, atributuak erakutsiz.
-2 - Mota `Movilere: `Dispositivoere 'motako azpiklasea da, eta "numeroa" atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self) 'metodoa, superklasekoak aprobetxatuz. Gehitu "def llamar (self, numero)" funtzioa. Atera dezala pantailatik kate bat "numero deituz" esanez.
-3 - Mota `Ordenadorea: `Dispositivoere 'azpiklasea da, "prozesadorea" atributua gehitu behar zaio. Sortu eraikitzailea eta "def toString (self)" funtzioa superklasekoak aprobetxatuz
-Gainera, sakelakoa, ordenagailua eta laginak sortzeko behar den kodea gehitzen du.
+1 - `Dispositiboa` klasea: `izena` eta `prezioa` atributuak ditu. Eraikitzaile bat atributuekin, `set` eta `get` eta `toString` funtzioak gehitu (atributuak erakusteko)
+2 - `Mugikorra` klasea: `Dispositiboa` motako azpiklasea da, eta `zenbakia` atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self)` metodoa, superklasekoak aprobetxatuz. Gehitu `def deitu (self, zenbakia)` funtzioa, pantailatik "Deitzen zenbakia" esaten duena.
+3 - `Ordenadorea` klasea: `Dispositiboa` azpiklasea da, `prozesadorea` atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self)` funtzioa superklasekoak aprobetxatuz
+Gainera, mugikorra eta ordenagailua sortzeko behar den kodea idatzi.
 
 ```python
 class Dispositiboa:
@@ -816,107 +816,107 @@ Dell 4553.4 Lentium 4 ordenagailua
 Chanmhung telefonoa 434.4 665745345
 ```
 
-5.7 ariketa
+5.7 Ariketa
 
-Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Bazkaria mota askotakoa izango da. Hauek dira egin beharreko klaseak:
+Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Janari mota askotakoa izango da. Hauek dira egin beharreko klaseak:
 
-1 - Mota `Komidaa: "izena" eta "pisua" atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString 'funtzio bat erabiltzen, atributuak erakutsiz.
-2 - Mota `Futua: `Komidaa 'motako azpiklasea da, eta `bitamina' atributua gehitu behar zaio. Sortu eraikitzailea eta `toString 'funtzioa superklasekoak aprobetxatuz.
-3 - Mota `Karamela: `Komidaa 'azpiklasea da, eta `kaloria' atributua gehitu behar zaio. Sortu eraikitzailea eta funciñon `toStringere 'delakoa, superklasekoak aprobetxatuz.
-4 - Mota `Kestak, `elikadura 'izeneko atributua du, eta janari-motako elementu-arrai bat da (`Futua`Carameloa). Eraikitzailean hasten da. Hiru funtzio ditu:
+1 - `Janaria` klasea: `izena` eta `pisua` atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString` funtzio bat erabiltzen, atributuak erakutsiz.
+2 - `Fruta` klasea: `Janaria` klasearen azpiklasea da, eta `bitamina` atributua gehitu behar zaio. Sortu eraikitzailea eta `toString` funtzioa superklaseko kodea berrerabiliz.
+3 - `Goxokia` klasea: `Janaria` klasearen azpiklasea da, eta `kaloria` atributua gehitu behar zaio. Sortu eraikitzailea eta `toString` funtzioa, superklaseko kodea berrerabiliz.
+4 - `Saskia` klasea, `janariak` izeneko atributua du, eta janari klaseko (edo azpiklaseko) elementu arrai bat da: `Futua` eta `Goxokia`. Eraikitzailean hasten da. Hiru funtzio ditu:
 
-- `def meterOtordua (self, jana)`
-- `def pesoTotal (self) "-k saskiko janariaren guztizko pisua itzultzen du.`
-- `def toString (self )» saskiko janari guztia erakusteko.``
+- `def sartuJanaria (hau, janari)` saskian janari bat sartzen du.
+- `def pisuGuztira (hau)` saskiko janariaren guztizko pisua itzultzen du.
+- `def toString (self )` saskiko janari guztia erakusteko.
 
-Gainera, erantsi behar den kodea instantzia hauek sortzeko: `Fruta, `Carameloa, eta erantsi `Cestaa.
+Gainera, erantsi behar den kodea instantzia hauek sortzeko: `Fruta` eta `Goxokia` klaseen instantziak sortu, eta erantsi `Saskia` motako instantzia bati.
 
 ```python
 class Janaria:
-    def __init__(hau, izena, pisua):
-        hau._izena = izena
-        hau._pisua = pisua
+    def __init__(self, izena, pisua):
+        self._izena = izena
+        self._pisua = pisua
 
     @property
-    def izena (hau):
-        return hau._izena
+    def izena (self):
+        return self._izena
 
     @izena.setter
-    def izena (hau, izena):
-        hau._izena = izena
+    def izena (self, izena):
+        self._izena = izena
 
     @property
-    def pisua (hau):
-        return hau._pisua
+    def pisua (self):
+        return self._pisua
 
     @pisua.setter
-    def pisua (hau, pisua):
-        hau._pisua = pisua
+    def pisua (self, pisua):
+        self._pisua = pisua
 
-    def toString (hau):
-        return f"{hau._izena} {hau._pisua}"
+    def toString (self):
+        return f"{self._izena} {self._pisua}"
 
 
 class Fruta(Janaria):
-    def __init__(hau, izena, pisua, bitamina):
+    def __init__(self, izena, pisua, bitamina):
         super().__init__(izena, pisua)
-        hau._bitamina = bitamina
+        self._bitamina = bitamina
 
     @property
-    def bitamina (hau):
-        return hau._bitamina
+    def bitamina (self):
+        return self._bitamina
 
     @bitamina.setter
-    def bitamina (hau, bitamina):
-        hau._bitamina = bitamina
+    def bitamina (self, bitamina):
+        self._bitamina = bitamina
 
-    def toString (hau):
-        return f'{super().toString()} {hau._bitamina}'
+    def toString (self):
+        return f'{super().toString()} {self._bitamina}'
 
 
 class Goxokia(Janaria):
-    def __init__(hau, izena, pisua, kaloria):
+    def __init__(self, izena, pisua, kaloria):
         super().__init__(izena, pisua)
-        hau._kaloria = kaloria
+        self._kaloria = kaloria
 
     @property
-    def kaloria (hau):
-        return hau._kaloria
+    def kaloria (self):
+        return self._kaloria
 
     @kaloria.setter
-    def kaloria (hau, kaloria):
-        hau._kaloria = kaloria
+    def kaloria (self, kaloria):
+        self._kaloria = kaloria
 
-    def toString (hau):
-        return f'{super().toString()} {hau._kaloria}'
+    def toString (self):
+        return f'{super().toString()} {self._kaloria}'
 
 
 class Saskia:
-    def __init__(hau):
-        hau._janariak = []
+    def __init__(self):
+        self._janariak = []
 
-    def sartuJanaria (hau, janari):
-        hau._janariak.append(janari)
+    def sartuJanaria (self, janari):
+        self._janariak.append(janari)
 
-    def pisuGuztira (hau):
+    def pisuGuztira (self):
         guztira = 0
-        for janaria in hau._janariak:
+        for janaria in self._janariak:
             guztira += janaria.pisua
 
         return guztira
 
-    def toString (hau):
+    def toString (self):
         informazioa = ""
-        for janaria in hau._janariak:
+        for janaria in self._janariak:
             informazioa = informazioa + janaria.toString() + "\n"
 
         return informazioa
 
 
-txintxa = Goxokia("Cheiw", 0.2, 100)
-gominoa = Goxokia("Fresa", 0.3, 210)
-udarea = Fruta("Pera", 0.1, "B")
-sagarra = Fruta("Manzana", 0.15, "A")
+txintxa = Goxokia("Bomer", 0.2, 100)
+gominoa = Goxokia("Marrubia", 0.3, 210)
+udarea = Fruta("Udarea", 0.1, "B")
+sagarra = Fruta("Sagarra", 0.15, "A")
 
 saskia = Saskia()
 saskia.sartuJanaria(txintxa)
@@ -926,11 +926,15 @@ saskia.sartuJanaria(sagarra)
 
 print("Saskiaren edukia:", saskia.toString())
 print("Pisua guztira:", saskia.pisuGuztira())
-
 ```
 
 Emaitza:
 
 ```console
+Saskiaren edukia: Bomer 0.2 100
+Marrubia 0.3 210
+Udarea 0.1 B
+Sagarra 0.15 A
 
+Pisua guztira: 0.75
 ```
